--- a/_config.yml
+++ b/_config.yml
@@ -22,10 +22,10 @@ repository               : "academicpages/academicpages.github.io"
 #               Additional customization can be done by editing /_includes/author-profile.html
 author:
   # Biographic information
-  avatar           : "profile.png"
-  name             : "Your Sidebar Name"
+  avatar           : "photo.png"
+  name             : "OuYang Caihong"
   pronouns         : # example: "she/her"  
-  bio              : "Short biography for the left-hand sidebar"
+  bio              : "Welcome to rainbow's academic filed!"
   location         : "Earth"
   employer         : "Red Brick University"
   uri              : # URL
