--- a/_config.yml
+++ b/_config.yml
@@ -7,7 +7,7 @@
 # server process.
 
 # Basic Site Settings
-locale                   : "en-US"
+locale                   : "ZhongGuanCun Street, No.59 Beijing, China 100872"
 site_theme               : "default"
 title                    : "Your Name / Site Title"
 title_separator          : "-"
