--- a/_config.yml
+++ b/_config.yml
@@ -26,10 +26,10 @@ author:
   name             : "OuYang Caihong"
   pronouns         : # example: "she/her"  
   bio              : "Welcome to rainbow's academic filed!"
-  location         : "Earth"
-  employer         : "Red Brick University"
+  location         : "ZhongGuanCun Street, No.59 Beijing, China 100872"
+  employer         : "Renmin University of China"
   uri              : # URL
-  email            : "none@example.org" 
+  email            : "oych10c@ruc.edu.cn" 
 
   # Academic websites
   academia         : # URL
